--- a/roles/prep_nginx/templates/nginx.conf.j2
+++ b/roles/prep_nginx/templates/nginx.conf.j2
@@ -14,7 +14,7 @@ http {
 			server unix:{{ php_socket[ansible_distribution] }};
 		}
 		set_real_ip_from 127.0.0.1;
-		set_real_ip_from {{ net_mask | ipaddr('net') }};
+		set_real_ip_from {{ net_mask }};
 		real_ip_header X-Forwarded-For;
 		real_ip_recursive on;
 		include /etc/nginx/mime.types;
